# LibPacIO

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  README.md  TODO
docs/: AUTHORS  CHANGELOG  INSTALL.md  USAGE.md
headers/: filePathArray.h  filePathExtender.h  filePathGetter.h  filePathHandler.h  filePathPrinter.h  filePathTrimmer.h  nullHandler.h  romFile.h  romIO.h  romSet.h  romSetHandler.h  romSetPrinter.h  stringAdder.h
include/: libpacio.h  pacerror.h  pacio.h  paclimits.h  pacprint.h  pacrom.h  pacset.h  pacsort.h
include/libpacio/: load.h  name.h  pacio.h  pacrom.h  pacromset.h  pathconcat.h  print.h  print_libpacio.h  read.h  save.h  version.h.in  write.h
include/test/: flag_handler.h  help.h  main.h  pacio_test.h  path_handler.h  version_print.h
src/: debug.c  filePathArray.c  filePathExtender.c  filePathGetter.c  filePathHandler.c  filePathPrinter.c  filePathTrimmer.c  nullHandler.c  pacerror.c  pacio.c  paclimits.c  pacprint.c  pacrom.c  pacset.c  pacsort.c  romFile.c  romIO.c  romSet.c  romSetHandler.c  romSetPrinter.c  stringAdder.c  test.c
src/main/: load.c  pacrom.c  pacromset.c  pathconcat.c  print.c  print_libpacio.c  read.c  save.c  write.c
src/test/: flag_handler.c  help.c  main.c  pacio_test.c  path_handler.c  version_print.c
